--- a/index.html
+++ b/index.html
@@ -5,10 +5,18 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="paginas/css2/estilos2 .css">
+        <link rel="stylesheet" href="paginas/css3/estilos3 .css">
+        <link rel="stylesheet" href="paginas/css4/estilos4 .css">
+        <link rel="stylesheet" href="paginas/css5/estilos5 .css">
+
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="php/envia.php">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+        <link rel="icon" href="imagenes/logo.png">
         <link rel="stylesheet" href="php/confirma.html">
         <script src="https://kit.fontawesome.com/c15b744a04.js" crossorigin="anonymus"></script>
     <title> Portafolio de Liseth - INICIO</title>
@@ -45,54 +53,40 @@
                         <li><a href="paginas/contacto.html">CONTACTO</a></li>
                 </ul>
             </nav>
-    <div>
+        </div>
 </header>
 
 
 <body>
-    <div class="row">
-        <div class="col-md-12 inicio">
-            <img src="imagenes/logoopacidad.png" class="banner">
-            <div class="row">
-                <div class="col-md-8 nombre">
-                    <h1>Karen Liseth
-                    <br>
-                    Productora Multimedia
-                    </h1>
-                </div>
-                <div class="col-md-4 foto">
-                    <img src="imagenes/foto.png" class="foto1">
-                </div>
-            </div>
+    <div class="col-md-12 inicio">
+        <img src="imagenes/logoopacidad.png" class="banner">
+        <div class="col-md-8 nombre">
+            <h1>Karen Liseth
+            <br>
+            Productora Multimedia
+            </h1>
+        </div>
+        <div class="col-md-4 foto">
+            <img src="imagenes/foto sin fondo ni edicion de pincel.png" style="width: 75%; height: 80%;" class="foto1">
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-md-12 caja1">
-            <div class="row">
-                <div class="col-md-8 descripcion">
-                    <h1 id="sobremi">SOBRE MI</h1>
-                    <h2 class="texto">
-                        Hola, mi nombre es Karen Liseth Posso Pinchao, tengo 19 años de edad, estudio Produccion Multimedia en el SENA, mis pasatiempos favoritos son: escuchar música, tocar guitarra, hacer manualidades, tomar fotos a atardeceres entre otros, me considero una persona responsable, trato de mejorar cada día en mi ámbito personal y laboral, por lo general me gusta reforzar casi todo lo que aprendo.
-                    </h2>
+    <div class="col-md-12 caja1">
+        <div class="row">
+            <div class="col-md-8 descripcion">
+                <h1 id="sobremi">SOBRE MI</h1>
+                <h2 class="texto">
+                    Hola, mi nombre es Karen Liseth Posso Pinchao, tengo 19 años de edad, estudio Produccion Multimedia en el SENA, mis pasatiempos favoritos son: escuchar música, tocar guitarra, hacer manualidades, tomar fotos a atardeceres entre otros, me considero una persona responsable, trato de mejorar cada día en mi ámbito personal y laboral, por lo general me gusta reforzar casi todo lo que aprendo.
+                </h2>
+            </div>
 
-                </div>
-                <div class="col-md-4 descripcion2">
-                        <div id="video">
-                            <video id=videopum controls preload> 
-                                <source src="videos/presentacion.mp4" type="video/mp4">
-                            </video>
-                        </div>
-                </div>
-
+            <div class="animate__animated animate__backInUp col-md-4 descripcion2" >
+                <img  src="imagenes/cartoon.png" alt="">
             </div>
         </div>
     </div>
-
 </body>
 
-
-   
 
 
 
