--- a/paginas/experiencialaboral.html
+++ b/paginas/experiencialaboral.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="css5/estilos5.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link rel="icon" href="imagenes/logo.png">
     <title>EXPERIENCIA laboral</title>
 </head>
 
@@ -54,14 +56,17 @@
         <div class="col-md-6 formacion">
             <h1 class="misael1">NEGOCIO FAMILIAR:</h1>
             <h1 class="misael">Parqueadero
+                <br>Cargo: Atención al cliente
                 <br> Diciembre 2018 - Enero 2019
             </h1>
+            <img src="../imagenes/carro.png"  style="max-width: 40%; margin-left:30%; margin-top: 5%;" alt=""  class="animate__animated animate__backInLeft">
         </div>
         <div class="col-md-6 formacion1">
             <h1 class="misael1">EMPRESA PROCESOS Y SERVICIOS:</h1>
             <h1 class="misael">Cargo: Digitadora
                 <br> Febrero 2019 - Agosto 2019
             </h1>
+            <img src="../imagenes/computador.png"  style="max-width: 40%; margin-left:30%; margin-top: 2%;" alt=""  class="animate__animated animate__backInRight">
         </div>
     </div>
 
