--- a/paginas/formacionacademica.html
+++ b/paginas/formacionacademica.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="css4/estilos4.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link rel="icon" href="imagenes/logo.png">
     <title>Formación académica</title>
 </head>
 
@@ -29,7 +31,7 @@
                         <ul>
                             <li><a href="../paginas/galeriadefotografia.html">Galería de Fotografía</a>
                             <li><a href="../paginas/galeriadeilustraciones.html">Galería de Ilustraciones</a>
-                            <li><a href="../paginas/formacionacademica.html">Galería de Manualidades</a>
+                            <li><a href="../paginas/galeriademanualidades.html">Galería de Manualidades</a>
                             <li><a href="../paginas/galeriadeanimaciones.html">Galería de animaciones</a>
                             <li><a href="../paginas/galeriadevideos.html">Galería de videos</a>
                          </ul>    
@@ -57,7 +59,7 @@
             <h1 class="misael">Misael Pastrana Borrero
                 <br> 2006-2012
             </h1>
-            <img src="../imagenes/grado1.gif" style="max-width: 20%; margin-left:150px; margin-top: 30px;"alt="">
+            <img src="../imagenes/misael.jpg" style="max-width: 40%; margin-left:30%; margin-top: 8%;"alt=""  class="animate__animated animate__fadeInRight">
 
         </div>
         <div class="col-md-4 formacion1">
@@ -65,14 +67,14 @@
             <h1 class="misael">Misael Pastrana Borrero
                 <br> 2013-2018
             </h1>
-            <img src="../imagenes/grado1.gif" style="max-width: 20%; margin-left:150px; margin-top: 30px;"alt="">
+            <img src="../imagenes/misael.jpg" style="max-width: 40%; margin-left:30%; margin-top: 8%;"alt=""  class="animate__animated animate__fadeInRight">
         </div>
         <div class="col-md-4 formacion2">
             <h1 class="misael1">TÉCNICO EN SISTEMAS:</h1>
             <h1 class="misael"> SENA (Centro de Diseño y Metrología)
                 <br> 2017-2018
             </h1>
-            <img src="../imagenes/grado1.gif" style="max-width: 20%; margin-left:150px; margin-top: 30px;"alt="">
+            <img src="../imagenes/sena.png" style="max-width: 40%; margin-left:30%; margin-top: 8%;"alt=""  class="animate__animated animate__fadeInRight">
         </div>
     </div>
 </body>
