--- a/paginas/galeriadevideos.html
+++ b/paginas/galeriadevideos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
+    <link rel="icon" href="imagenes/logo.png">
     <link rel="stylesheet" href="css14galevideos/estilos14.css">
     <title>GALERÍA DE VIDEOS</title>
 </head>
@@ -73,17 +73,6 @@
                         </video>
                     </div>
                 </div>
-
-                <h1 class="titulopollito">POLLITO EXPLOTA</h1>
-                <div class="col-md-12 presentacion">
-                    <div id="video">
-                        <video id=videopum controls preload> 
-                            <source src="../videos/animacion.mp4" type="video/mp4">
-                        </video>
-                    </div>
-                </div>
-
-
             </div>
 
             <div class="col-md-6 caja2">
@@ -98,14 +87,6 @@
            
 
             
-                <h1 class="titulopollito">POLLITO EXPLOTA</h1>
-                <div class="col-md-12 presentacion">
-                        <div id="video">
-                            <video id=videopum controls preload> 
-                                <source src="../videos/animacion.mp4" type="video/mp4">
-                            </video>
-                        </div>
-                </div>
                 <h1 class="titulopollito">POLLITO EXPLOTA</h1>
                 <div class="col-md-12 presentacion">
                         <div id="video">
