--- a/paginas/pasatiempos.html
+++ b/paginas/pasatiempos.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="css3/estilos3.css">
+    <link rel="icon" href="imagenes/logo.png">
     <title>PASATIEMPOS</title>
 </head>
 
@@ -24,13 +25,6 @@
                     </li>
     
                     <li><a href="../paginas/servicios.html">SERVICIOS</a>
-                        <ul>
-                            <li><a href="../paginas/fotografia.html">Fotografía</a>
-                            <li><a href="../paginas/ilustraciones.html">Ilustraciones</a>
-                            <li><a href="../paginas/animaciones.html">Animaciones</a>
-                            <li><a href="../paginas/videos.html">Audiovisuales</a>
-                        </ul>
-                    </li>
 
                     <li><a href="#porta">PORTAFOLIO</a>
                         <ul>
