--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="css6servicios/estilos6.css">
      <link rel="stylesheet" href="../css/font-awesome.css">
+     <link rel="icon" href="imagenes/logo.png">
     <script src="../js/jquery-3.5.1.min.js"></script>
     <script src="../js/main.js"></script>
     <title>SERVICIOS</title>
@@ -56,12 +57,12 @@
 
 
 <!--[if (gte mso 9)|(IE)]><table width="600" align="center" cellpadding="0" cellspacing="0" border="0"><tr><td><![endif]-->
-<table class="container"  width="100%" cellpadding="0" cellspacing="0" style="max-width:600px;margin:0 auto;">
+<table class="container"  width="100%" style="max-width:450px;margin:0 auto;">
     <tr>
-    	<td style="line-height:20px;height:20px;" height="20">&nbsp;</td>
+    	<td style="line-height:20px;height:20px; background-color: black;" height="20">&nbsp;</td>
     </tr>
     <tr>
-        <td  style="text-align: center; vertical-align: top; font-size: 0;">
+        <td  style="text-align: center; vertical-align: top; font-size: 0;background-color: black">
             <article id="slider">	
 				<input checked type="radio" name="slider" id="slide1" style="display:none !important;height:0;width:0;font-size:0;line-height:0;float:left;overflow:hidden;" />
 				<input type="radio" name="slider" id="slide2" style="display:none !important;height:0;width:0;font-size:0;line-height:0;float:left;overflow:hidden;"/>
@@ -72,20 +73,20 @@
 						<div class="inner">											
 							<article>
                                 <h1 class="titulosima">Fotografía</h1>
-                                    <img src="../imagenes/fotografia.jpg" alt="">						
+                                    <img src="../imagenes/fotografia.jpg"  style="width:90%;border-radius: 20px;" alt="">						
                             </article>
 
 							<article>
                                 <h1 class="titulosima">Ilustración</h1>
-                                    <img src="../imagenes/ilustraciones.jpg" alt="">
+                                    <img src="../imagenes/ilustraciones.jpg" style="width:100%; border-radius: 20px;" alt="">
 							</article>
 							<article>
                                 <h1 class="titulosima">Animación</h1>
-								    <img src="../imagenes/animaciones.jpg" alt="">
+								    <img src="../imagenes/colegio1 .png" style="width: 27%; border-radius: 20px;" alt="">
 							</article>
 							<article>
                                 <h1 class="titulosima">Audiovisuales</h1>
-                                    <img src="../imagenes/audiovisuales.jpg" alt="">
+                                    <img src="../imagenes/audiovisuales.jpg" style="width: 60%; border-radius: 20px;" alt="">
                             </article>			
 						</div>				
 					</div>		
